tests/errors/def_func_03.py
from lpython import i32
def func_03(x : i32 ,y : i32) -> i32 :
    print(x,y)

func_03(1)